--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx --watch index.ts",
-    "gen:keys": "tsx ../../scripts/generateKeys.ts",
-    "lint": "cd ../.. && yarn eslint examples/xmtp-flaunch",
+    "gen:keys": "tsx ./scripts/generateKeys.ts",
+    "lint": "yarn eslint examples/xmtp-flaunch",
     "start": "tsx index.ts"
   },
   "dependencies": {
-    "@xmtp/node-sdk": "1.1.1",
+    "@xmtp/content-type-wallet-send-calls": "^1.0.1",
+    "@xmtp/node-sdk": "^2.0.5",
     "ai": "^4.2.9",
+    "dotenv": "^16.5.0",
     "openai": "^4.28.0",
-    "viem": "^2.28.0"
+    "uint8arrays": "^5.1.0",
+    "viem": "^2.28.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
