--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=
+PINATA_JWT=
 # XMTP 
 WALLET_KEY= # the private key for the wallet
 ENCRYPTION_KEY= # the encryption key for the wallet
