--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 OPENAI_API_KEY=
 PINATA_JWT=
+MAINNET_RPC_URL=
 # XMTP 
 WALLET_KEY= # the private key for the wallet
 ENCRYPTION_KEY= # the encryption key for the wallet
