--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xmtp/content-type-wallet-send-calls": "^1.0.1",
     "@xmtp/node-sdk": "^2.0.9",
     "ai": "^4.2.9",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "openai": "^4.28.0",
     "uint8arrays": "^5.1.0",
