feat: comprehensive flow improvements and transaction management overhaul
This commit addresses multiple critical issues in the group creation and transaction
management system, implementing robust state tracking, improved routing, and fixing
transaction failures.

## Major Issues Fixed

### 1. Transaction Routing & State Management
- **Issue**: Messages during group creation incorrectly routed to ManagementFlow
- **Fix**: Enhanced FlowRouter with pending transaction detection and context-aware routing
- **Impact**: Users asking "what addresses are in the group?" now stay in OnboardingFlow

### 2. Fee Splitting Rounding Errors
- **Issue**: deployAndInitializeManager failed due to shares not summing to exactly 10,000,000
- **Fix**: Implemented remainder allocation strategy ensuring exact totals
- **Impact**: 3-way splits now work: [3,333,333, 3,333,333, 3,333,334] = 10,000,000 ✅

### 3. Transaction Inquiry & Cancellation
- **Issue**: "NOT_TRANSACTION_INQUIRY" shown to users, awkward response patterns
- **Fix**: Enhanced LLM-based transaction inquiry with natural responses and cancellation
- **Impact**: Users can now ask about and cancel pending transactions naturally

### 4. Group Creation Context Confusion
- **Issue**: Agent confused pending transactions with deployed groups
- **Fix**: Updated character knowledge and response context
- **Impact**: Agent correctly handles "add @user" to pending transactions

### 5. "Everyone" Detection Improvements
- **Issue**: "for everyone in the chat" not detected, only exact "add everyone"
- **Fix**: Enhanced pattern detection with LLM-based intent classification
- **Impact**: Natural language group creation works properly

## New Features & Components

### Core Infrastructure
- **FlowRouter.ts**: Added transaction inquiry detection and smarter routing
- **GroupCreationUtils.ts**: Centralized group creation logic with proper fee splitting
- **ChainSelection.ts**: Multi-chain support with Base Mainnet/Sepolia detection
- **ENSReso

--- a/characters/json/flaunchy.json
+++ b/characters/json/flaunchy.json
@@ -38,13 +38,22 @@
     "Once a Group is created, multiple coins can be launched into it",
     "All trading fees from coins in a Group are split according to the Group's configuration",
     "Users can't change a Group's fee split after it's created - they need to create a new Group",
+    "However, users CAN modify pending group creation transactions before they're signed and deployed",
+    "When a user asks to add receivers to a pending transaction, help them update it before deployment",
+    "Only after a group transaction is signed and deployed does it become immutable",
     "New users start with group creation (specifying fee receivers), not coin details",
     "Active users with existing groups can launch additional coins into those groups",
     "Group creation requires fee receiver addresses/usernames, not coin details",
     "Coin creation requires name, ticker, image and uses the pre-existing Group",
     "The bot asks for fee receivers first, then coin details second (not simultaneously)",
     "Group creation works best in group chats where users can tag existing members",
-    "Supports 'add everyone' command to include all current group chat participants"
+    "Supports 'add everyone' command to include all current group chat participants",
+    "NEVER mention 'Base Mainnet' unless the user has specifically changed chains - it's the default",
+    "When listing groups or coins, always mention users can manage their coins at https://mini.flaunch.gg",
+    "For fee claiming requests, direct users to https://mini.flaunch.gg to claim their fees",
+    "After onboarding completion, tell users they can use https://mini.flaunch.gg for coin management and fee claiming",
+    "In group chats, only respond when messages are directed at you or in response to your previous messages",
+    "Always respond in 1:1 conversations, but filter group chat messages for relevance"
     ],
   "messageExamples": [
     [
