feat: comprehensive flow architecture improvements and bug fixes
Major Features:
- Add dedicated GroupLaunchFlow for independent group creation
- Implement comprehensive cross-flow transaction clearing
- Add robust parameter validation for coin launches
- Enhance LLM-based intent classification and routing

Flow Architecture:
- Separate group launch from management flow to avoid conflicts
- Implement silent cross-flow transaction clearing across all flows
- Add transaction status inquiry detection and handling
- Improve flow routing priorities to handle capability questions

Data Persistence & Extraction:
- Fix coin data extraction to use extractMessageText() consistently
- Preserve complete coin data during parameter updates
- Add fee receiver extraction to QA flow for onboarding
- Improve message text extraction from JSON attachments

Parameter Validation:
- Market Cap: -,000 range validation
- Duration: 1-1440 minutes validation
- Premine: 0%-50% validation
- Buyback: 0%-100% validation

Error Handling:
- Add user-friendly error messages for percentage validation
- Handle username resolution failures gracefully
- Comprehensive error handling for group creation flows
- Improve transaction modification error handling

UX Improvements:
- Enhanced transaction inquiry responses with detailed context
- Natural parameter update acknowledgments
- Better group receiver formatting and display
- Improved success message routing to mini.flaunch.gg

Bug Fixes:
- Fix intent classification by adding group_launch to valid intents
- Prevent duplicate responses in transaction handling
- Fix data loss during parameter updates by preserving existing coin data
- Reduce excessive logging of base64 image data in IPFS utils
- Fix routing conflicts between capability questions and ongoing flows

Technical Improvements:
- Add comprehensive transaction context for LLM interactions
- Implement LLM-based pattern detection for better accuracy
- Enhanced debugging and logging throughout flows


--- a/characters/json/flaunchy.json
+++ b/characters/json/flaunchy.json
@@ -30,7 +30,7 @@
     "Uses a two-step process: First create a Group, then launch coins into that Group",
     "Step 1 - Group Creation: User specifies who receives trading fees (fee receivers)",
     "Step 2 - Coin Launch: User provides coin details to launch into the existing Group",
-    "Group creation deploys an AddressFeeSplitManager contract with the fee split configuration",
+    "Group creation sets up your fee splitting configuration on-chain",
     "Fee receivers can be: Farcaster usernames (@alice), ENS names (alice.eth), or Ethereum addresses (0x123...)",
     "Users can tag other members directly in their group chat to include them in the Group",
     "Users can say 'add everyone' to include all members of the current XMTP group chat",
@@ -48,7 +48,7 @@
     "The bot asks for fee receivers first, then coin details second (not simultaneously)",
     "Group creation works best in group chats where users can tag existing members",
     "Supports 'add everyone' command to include all current group chat participants",
-    "Base Mainnet is the default chain - only mention specific chain names when users are actively switching chains or when relevant to the context",
+    "Base Mainnet is the only supported chain - if users ask about other chains, explain they're not supported",
     "When listing groups or coins, always mention users can manage their coins at https://mini.flaunch.gg",
     "For fee claiming requests, direct users to https://mini.flaunch.gg to claim their fees",
     "After onboarding completion, tell users they can use https://mini.flaunch.gg for coin management and fee claiming",
@@ -136,7 +136,7 @@
   ],
   "topics": [
     "Two-step launch process (Group first, then Coins)",
-    "AddressFeeSplitManager contract deployment",
+    "Fee splitting group deployment",
     "Fee receiver specification and resolution",
     "Group creation with custom fee splits",
     "Multiple coins per group architecture",
