fix: resolve invited user flow and intent classification issues
## Invited User Welcome Flow
- Add 'invited' status to UserState type for users added to groups by others
- Update GroupStorageService to set 'invited' status for truly new users only
- Add userExists() method to SessionManager for proper state checking
- Implement handleInvitedUserWelcome() in ManagementFlow with personalized welcome
- Add Priority 2 routing in FlowRouter for invited users
- Welcome message shows groups, coins, ENS-resolved member names, and available actions

## Group Display Enhancements
- Add formatGroupDisplayWithENS() method with full address display and ENS resolution
- Update ManagementFlow to use ENS-resolved group listings
- Show full contract addresses instead of truncated versions
- Resolve fee receiver addresses to ENS names (basename, farcaster, ENS, fallback)

## Intent Classification Fixes
- Fix critical misclassification of token launch requests as group creation
- Add explicit distinction between 'launch a TOKEN' vs 'launch a GROUP'
- Enhance coin_launch examples with 'flaunch a token', platform-specific terminology
- Add CRITICAL TOKEN INDICATORS and clear disambiguation rules

## Onboarding Flow Improvements
- Add detectGroupCreationInMessage() for new users making specific requests
- Process group creation requests immediately instead of generic welcome
- Update transaction messages to use ENS-resolved names throughout
- Fix new user flow to handle explicit group creation requests

## Multiple Coin Launch Detection
- Add detection for multiple coin launch requests in QAFlow
- Provide clear limitation messaging: 'i can only launch one coin at a time!'
- Guide users to launch coins sequentially

## ENS Integration Enhancements
- Update transaction messages across all flows to use ENS resolution
- Add formatAddress/formatAddresses utility methods
- Improve group name generation with timestamp entropy for uniqueness
- Enhanced logging and debugging for group creation pr

--- a/characters/json/flaunchy.json
+++ b/characters/json/flaunchy.json
@@ -41,6 +41,7 @@
     "However, users CAN modify pending group creation transactions before they're signed and deployed",
     "When a user asks to add receivers to a pending transaction, help them update it before deployment",
     "Only after a group transaction is signed and deployed does it become immutable",
+    "Coin launch defaults are: $1000 market cap, 10% of supply in fair launch, and 30 minute fair launch duration. Users can modify these paramters.",
     "New users start with group creation (specifying fee receivers), not coin details",
     "Active users with existing groups can launch additional coins into those groups",
     "Group creation requires fee receiver addresses/usernames, not coin details",
