update commands for new logic

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx --watch index.ts",
-    "dev:new": "tsx --watch src/main.ts",
+    "dev": "tsx --watch src/main.ts",
+    "dev:old": "tsx --watch index.ts",
     "cleanup": "tsx ./scripts/cleanup.ts",
     "full-cleanup": "tsx ./scripts/full-cleanup.ts",
     "gen:keys": "tsx ./scripts/generateKeys.ts",
     "lint": "yarn eslint examples/xmtp-flaunch",
-    "start": "tsx index.ts",
-    "start:new": "tsx src/main.ts"
+    "start": "tsx src/main.ts",
+    "start:old": "tsx index.ts"
   },
   "dependencies": {
     "@xmtp/content-type-remote-attachment": "^2.0.2",
