--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx --watch index.ts",
+    "dev": "tsx --watch src/main.ts",
+    "dev:old": "tsx --watch index.ts",
+    "cleanup": "tsx ./scripts/cleanup.ts",
+    "full-cleanup": "tsx ./scripts/full-cleanup.ts",
     "gen:keys": "tsx ./scripts/generateKeys.ts",
     "lint": "yarn eslint examples/xmtp-flaunch",
-    "start": "tsx index.ts"
+    "start": "tsx src/main.ts",
+    "start:old": "tsx index.ts"
   },
   "dependencies": {
     "@xmtp/content-type-remote-attachment": "^2.0.2",
+    "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
-    "@xmtp/node-sdk": "^2.1.0",
+    "@xmtp/node-sdk": "^3.0.0",
     "ai": "^4.2.9",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
