--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cleanup": "tsx ./scripts/cleanup.ts",
     "full-cleanup": "tsx ./scripts/full-cleanup.ts",
     "gen:keys": "tsx ./scripts/generateKeys.ts",
+    "test:status": "tsx ./scripts/test-status-monitor.ts",
     "lint": "yarn eslint examples/xmtp-flaunch",
     "start": "tsx src/main.ts",
     "start:old": "tsx index.ts"
