feat: enhance bot UX with reactions, contextual replies, and optimized routing
Major UX improvements:
- Replace 'Thinking...' messages with paw emoji reactions (🐾)
- Skip paw reactions in direct messages (1-on-1 chats)
- Auto-reply format when other users message between conversations
- Add conversation context to intent detection for better routing

Performance optimizations:
- Share detection results between FlowRouter and flows (avoid redundant LLMs)
- Remove duplicate greeting detection in OnboardingFlow
- Enhanced message text extraction for different content types

Routing fixes:
- Add Priority 3.5 to route non-onboarding questions to QA before forcing onboarding
- Fix 'What time is it?' and similar queries going to onboarding instead of QA
- Separate capability vs general question handling in QA flow
- Increase detection temperature from 0.1 to 0.3 for better context interpretation

Dependencies:
- Add @xmtp/content-type-reaction for paw emoji reactions
- Add @xmtp/content-type-reply for contextual reply threading

Technical improvements:
- Enhanced conversation history handling with proper message text extraction
- Added reply-to-agent detection for high-confidence engagement
- Improved direct message vs group chat detection
- Added comprehensive logging for debugging routing decisions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start:old": "tsx index.ts"
   },
   "dependencies": {
+    "@xmtp/content-type-reaction": "^2.0.0",
     "@xmtp/content-type-remote-attachment": "^2.0.2",
+    "@xmtp/content-type-reply": "^2.0.2",
     "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
     "@xmtp/node-sdk": "^3.0.0",
