--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "full-cleanup": "tsx ./scripts/full-cleanup.ts",
     "gen:keys": "tsx ./scripts/generateKeys.ts",
     "test:status": "tsx ./scripts/test-status-monitor.ts",
+    "test:restart": "tsx ./scripts/test-restart.ts",
     "lint": "yarn eslint examples/xmtp-flaunch",
     "start": "tsx src/main.ts",
     "start:old": "tsx index.ts"
