fix: determine mentions with image attachments

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 OPENAI_API_KEY=
 PINATA_JWT=
 MAINNET_RPC_URL=
+DISPLAY_STATUS_LOGS=false
 # XMTP 
 WALLET_KEY= # the private key for the wallet
 ENCRYPTION_KEY= # the encryption key for the wallet
